--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no tnpm i typescriptest specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/KatyaMatya21/ya_server#readme",
   "devDependencies": {
-    "express": "^4.16.3"
+    "@types/node": "^10.12.0",
+    "express": "^4.16.3",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   }
 }
