--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app/index.js",
+    "start": "ts-node app/index.js",
     "test": "echo \"Error: no tnpm i typescriptest specified\" && exit 1"
   },
   "repository": {
